# learning-haskell

./: .gitignore  README.md  learning-haskell.cabal
book/chapter/01/examples/: WC.hs
book/chapter/03/exercises/01/: length.hs
book/chapter/03/exercises/02/: lengthWithTypeSignature.hs
book/chapter/03/exercises/03/: mean.hs
book/chapter/03/samples/: Lending.hs  LocalFunctions.hs
book/chapter/04/: chapter-04.cabal
book/chapter/04/exercises/page84/01/: SafeListOperations.hs
book/chapter/04/exercises/page84/02/: SplitWith.hs
book/chapter/04/exercises/page84/03/: FirstWordInLine.hs
book/chapter/04/exercises/page97/01/: IntParseFold.hs
book/chapter/04/exercises/page97/02/: IntParse.hs
book/chapter/04/samples/: Adler32.hs  Filter.hs  IntParse.hs  InteractWith.hs  Map.hs  Plus.hs
book/chapter/04/src/exercises/page97/E02/: IntParse.hs
book/chapter/04/src/samples/: Adler32.hs  Filter.hs  SplitLines.hs  Sum.hs
book/chapter/04/tests/: test.hs
haskell-programming/: chapter02.adoc  chapter03.adoc  chapter04.adoc  chapter05.adoc  chapter06.adoc  chapter07.adoc  chapter08.adoc  chapter09.adoc  chapter10.adoc  chapter11.adoc  chapter12.adoc  chapter13.adoc  chapter14.adoc  chapter15.adoc  chapter16.adoc  chapter17.adoc  chapter18.adoc  chapter19.adoc  chapter20.adoc  solutions.txt
old/book/chapter/01/exercises/03/: CountWords.hs
old/book/chapter/01/exercises/04/: CountCharacters.hs
old/book/chapter/02/exercises/02/: lastButOne.hs
old/book/chapter/03/exercises/03/: mean.hs
old/book/chapter/03/exercises/07/: intersperse.hs
old/book/chapter/03/exercises/c01/: ListADT.hs
old/book/chapter/03/exercises/c02/: TreeADT.hs
old/book/chapter/03/samples/: Second.hs
old/book/chapter/04/src/Exercises/Page97/E01/: IntParseFold.hs
old/book/chapter/04/tests/: Test.hs
old/socrates2015/: socrates.hs
rules/: Lists.md  cabal.md  compilation.md  functions.md  ghci.md  patternmatching.md  std-library.md  types.md
socrates2015/: hspec.hs
src/: Chapter03.hs  Chapter04.hs  Chapter05.hs  Chapter05Arith3Broken.hs  Chapter05Sing.hs  Chapter06.hs  Chapter07.hs  Chapter08.hs  Chapter10.hs  Chapter11.hs  Chapter12.hs  Chapter13.hs  Chapter14.hs  Chapter15.hs  Chapter16.hs  Chapter17.hs  Chapter20.hs  Lib.hs  Main.hs
stack/gettingstarted/: README.md  gettingstarted.cabal
test/: AllTheFirstChaptersSpec.hs  Chapter06Spec.hs  Chapter07Spec.hs  Chapter08Spec.hs  Chapter09Spec.hs  Chapter10Spec.hs  Chapter11Spec.hs  Chapter12Spec.hs  Chapter13Spec.hs  Chapter14Spec.hs  Chapter15Spec.hs  Chapter16Spec.hs  Chapter17Spec.hs  Chapter18Spec.hs  Chapter19Spec.hs  Chapter20Spec.hs  Spec.hs
