name:                learning-haskell
version:             0.1.0.0
-- synopsis:
-- description:
homepage:            https://github.com/githubuser/learning-haskell#readme
license:             BSD3
license-file:        LICENSE
author:              Author name here
maintainer:          example@example.com
copyright:           2017 Author name here
category:            Web
build-type:          Simple
extra-source-files:  README.md
cabal-version:       >=1.10

library
  hs-source-dirs:      src
  ghc-options:       -Wall
  exposed-modules:     Lib
                     , Chapter04
                     , Chapter05
                     , Chapter05Sing
                     , Chapter06
                     , Chapter07
                     , Chapter08
                     , Chapter09
                     , Chapter10
                     , Chapter11
                     , Chapter12
                     , Chapter13
                     , Chapter14
                     , Chapter15
                     , Chapter16
                     , Chapter17
                     , Chapter18
                     , Chapter19
                     , Chapter20
  build-depends:       base >= 4.7 && < 5
                     , text
                     , filepath
                     , containers
  default-language:    Haskell2010

executable learning-haskell-exe
  hs-source-dirs:      app
  main-is:             Main.hs
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  build-depends:       base
                     , learning-haskell
  default-language:    Haskell2010

test-suite learning-haskell-test
  type:                exitcode-stdio-1.0
  hs-source-dirs:      test
  main-is:             Spec.hs
  Other-Modules:       AllTheFirstChaptersSpec
                     , Chapter06Spec
                     , Chapter07Spec
                     , Chapter08Spec
                     , Chapter09Spec
                     , Chapter10Spec
                     , Chapter11Spec
                     , Chapter12Spec
                     , Chapter13Spec
                     , Chapter14Spec
                     , Chapter15Spec
                     , Chapter16Spec
                     , Chapter17Spec
                     , Chapter18Spec
                     , Chapter19Spec
                     , Chapter20Spec
  build-depends:       base
                     , hspec
                     , hspec-discover
                     , hspec-checkers
                     , checkers
                     , QuickCheck
                     , learning-haskell
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  default-language:    Haskell2010

source-repository head
  type:     git
  location: https://github.com/signed/learning-haskell
